[tool.poetry]
name = "repl_nix_JJs-Dungeon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
keyboard = "^0.13.5"
pygame = "^2.5.2"
splash = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
